# swarm

./: README.md  pyproject.toml
docs/adr/: 0001-side-effect-free-epistemic-core.md  0002-append-only-revision-memory.md  0003-language-interface-write-isolation.md  README.md
episteme/: __init__.py  core.py  experience.py  interface.py  memory.py  models.py
tests/: __init__.py  conftest.py  test_core.py  test_experience.py  test_interface.py  test_memory.py  test_models.py
